--- a/src/ItemArchivos/ItemArchivos.scss
+++ b/src/ItemArchivos/ItemArchivos.scss
@@ -1,4 +1,4 @@
-li{
+li {
     list-style: none;
     margin: 1.2em 0;
     background-color: #f55e3038;
@@ -7,25 +7,24 @@ li{
     align-items: center;
     padding: 1.2em 1.5em;
 
-    svg{
+    svg {
         color: #f55321;
-
-        &:first-child{
+        &:first-child {
             font-size: 1.2em;
             margin-right: 0.8em;
         }
     }
 
-    p{
+    p {
         flex: 1;
-        font-size: 0.9em;
+        font-size: 0.9rem;
     }
 
-    .actions{
+    .actions {
         justify-self: flex-end;
         cursor: pointer;
 
-        .fa-spinner{
+        .fa-spinner {
             font-size: 1.2em;
         }
     }
